Homelab12 - CI CD Pipeline/terraform/aws/main.tf
terraform {
  required_version = ">= 1.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

resource "aws_vpc" "main_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "main-vpc"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name = "main-igw"
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-2a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main_vpc.id
  route {
    cidr_block = "0.0.0.0/0"                    # All possible IP addresses
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public_rt_association" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "flask_sg" {

  name = "flask_app_sg_${var.environment}"
  description = "Security group for Flask application"

  vpc_id = aws_vpc.main_vpc.id

  # We allow SSH in
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # The Flask app will be running at port 5000
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "flask_app_sg"
    Environment = var.environment
  }
}

resource  "aws_instance" "flask_app" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public_subnet.id

  vpc_security_group_ids      = [aws_security_group.flask_sg.id]

  key_name                    = var.key_name
  associate_public_ip_address = true

  depends_on = [
    aws_security_group.flask_sg,
    aws_internet_gateway.igw
  ]

  # Here we update the newly provisioned EC2 instance, download docker and get it running
  # Yum is the package manager on Red Hat Enterprise Linux -- and it is so Yummy!
  user_data = <<-EOF
              #!/bin/bash
              yum update -y
              yum install -y docker
              systemctl start docker
              systemctl enable docker
              usermod -aG docker ec2-user
              echo "Finished configuring the newly provisioned EC2 instance"
              EOF

  tags = {
    Name = "ubuntu-instance"
    Environment = var.environment
  }
}
